[package]
name = "nodetunnel"
version = "0.1.0"
edition = "2024"

[lib]
name = "nodetunnel"
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.4.3", features = ["api-4-3", "register-docs"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
paperudp = { git = "https://github.com/curtjs/paperudp.git" }
